new file:   contracts/eevent.sol 	modified:   hardhat.config.js 	modified:   package-lock.json 	modified:   package.json 	modified:   scripts/deploy.js 	new file:   scripts/deployevent.js 	new file:   scripts/p.js

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
     "ethers": "^5.7.2"
   }
 }
